2009-02-22 [colin]	3.7.0cvs69

	* src/addressbook.c
	* src/procmime.c
		More fixes

2009-02-22 [colin]	3.7.0cvs68

	* src/addrduplicates.c
	* src/addressbook.c
	* src/addrharvest.c
	* src/codeconv.c
	* src/compose.c
	* src/filtering.c
	* src/folder.c
	* src/imap.c
	* src/imap_gtk.c
	* src/importldif.c
	* src/jpilot.c
	* src/mainwindow.c
	* src/matcher.c
	* src/mbox.c
	* src/messageview.c
	* src/mh_gtk.c
	* src/prefs_common.c
	* src/prefs_filtering.c
	* src/prefs_gtk.c
	* src/printing.c
	* src/privacy.c
	* src/procmime.c
	* src/procmsg.c
	* src/summaryview.c
	* src/textview.c
	* src/undo.c
	* src/wizard.c
	* src/common/md5.c
	* src/common/socket.c
	* src/common/template.c
	* src/etpan/imap-thread.c
	* src/gtk/gtkaspell.c
	* src/gtk/gtkcmctree.c
	* src/gtk/gtksctree.c
	* src/gtk/inputdialog.c
	* src/plugins/pgpcore/sgpgme.c
	* src/plugins/pgpmime/pgpmime.c
	* src/plugins/smime/smime.c
	* src/plugins/spamassassin/spamassassin.c
		Fix errors caught by Coverity: NULL checks, leaks, overruns,
		uninitialised accesses

2009-02-17 [colin]	3.7.0cvs67

	* src/compose.c
		Disable controls during queuing

2009-02-15 [colin]	3.7.0cvs66

	* src/privacy.c
	* src/plugins/pgpcore/select-keys.c
	* src/plugins/pgpcore/sgpgme.c
		Disable use of disabled keys

2009-02-15 [colin]	3.7.0cvs65

	* src/folderview.c
	* src/summaryview.c
		Fix font updating after changing 
		prefs_common.derive_from_normal_font

2009-02-12 [paul]	3.7.0cvs64

	* src/addressitem.h
	* src/export.h
	* src/headerview.c
	* src/headerview.h
	* src/common/version.h.in
	* src/gtk/about.h
	* src/gtk/menu.c
	* src/gtk/menu.h
		more copyright header fixes

2009-02-12 [paul]	3.7.0cvs63

	* src/gtk/progressdialog.c
	* src/gtk/progressdialog.h
		fix copyright header

2009-02-12 [paul]	3.7.0cvs62

	* src/gtk/spell_entry.c
	* src/gtk/spell_entry.h
		better, more standard copyright header

2009-02-12 [paul]	3.7.0cvs61

	* src/gtk/spell_entry.c
	* src/gtk/spell_entry.h
		changes to copyright header

2009-02-12 [paul]	3.7.0cvs60