@@ -3731,3 +3731,4 @@
 ( cvs diff -u -r 1.382.2.499 -r 1.382.2.500 src/compose.c;  ) > 3.7.0cvs67.patchset
 ( cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/addrduplicates.c;  cvs diff -u -r 1.60.2.130 -r 1.60.2.131 src/addressbook.c;  cvs diff -u -r 1.6.10.20 -r 1.6.10.21 src/addrharvest.c;  cvs diff -u -r 1.65.2.66 -r 1.65.2.67 src/codeconv.c;  cvs diff -u -r 1.382.2.500 -r 1.382.2.501 src/compose.c;  cvs diff -u -r 1.60.2.50 -r 1.60.2.51 src/filtering.c;  cvs diff -u -r 1.213.2.188 -r 1.213.2.189 src/folder.c;  cvs diff -u -r 1.179.2.239 -r 1.179.2.240 src/imap.c;  cvs diff -u -r 1.1.2.62 -r 1.1.2.63 src/imap_gtk.c;  cvs diff -u -r 1.14.2.22 -r 1.14.2.23 src/importldif.c;  cvs diff -u -r 1.18.2.28 -r 1.18.2.29 src/jpilot.c;  cvs diff -u -r 1.274.2.298 -r 1.274.2.299 src/mainwindow.c;  cvs diff -u -r 1.75.2.63 -r 1.75.2.64 src/matcher.c;  cvs diff -u -r 1.28.2.46 -r 1.28.2.47 src/mbox.c;  cvs diff -u -r 1.94.2.198 -r 1.94.2.199 src/messageview.c;  cvs diff -u -r 1.2.2.35 -r 1.2.2.36 src/mh_gtk.c;  cvs diff -u -r 1.204.2.186 -r 1.204.2.187 src/prefs_common.c;  cvs diff -u -r 1.59.2.76 -r 1.59.2.77 src/prefs_filtering.c;  cvs diff -u -r 1.10.2.39 -r 1.10.2.40 src/prefs_gtk.c;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/printing.c;  cvs diff -u -r 1.10.2.20 -r 1.10.2.21 src/privacy.c;  cvs diff -u -r 1.49.2.124 -r 1.49.2.125 src/procmime.c;  cvs diff -u -r 1.150.2.112 -r 1.150.2.113 src/procmsg.c;  cvs diff -u -r 1.395.2.407 -r 1.395.2.408 src/summaryview.c;  cvs diff -u -r 1.96.2.215 -r 1.96.2.216 src/textview.c;  cvs diff -u -r 1.13.2.19 -r 1.13.2.20 src/undo.c;  cvs diff -u -r 1.1.2.78 -r 1.1.2.79 src/wizard.c;  cvs diff -u -r 1.2.2.8 -r 1.2.2.9 src/common/md5.c;  cvs diff -u -r 1.13.2.43 -r 1.13.2.44 src/common/socket.c;  cvs diff -u -r 1.2.4.29 -r 1.2.4.30 src/common/template.c;  cvs diff -u -r 1.1.4.109 -r 1.1.4.110 src/etpan/imap-thread.c;  cvs diff -u -r 1.9.2.65 -r 1.9.2.66 src/gtk/gtkaspell.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/gtk/gtkcmctree.c;  cvs diff -u -r 1.1.4.54 -r 1.1.4.55 src/gtk/gtksctree.c;  cvs diff -u -r 1.2.2.36 -r 1.2.2.37 src/gtk/inputdialog.c;  cvs diff -u -r 1.1.2.62 -r 1.1.2.63 src/plugins/pgpcore/sgpgme.c;  cvs diff -u -r 1.1.2.53 -r 1.1.2.54 src/plugins/pgpmime/pgpmime.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/plugins/smime/smime.c;  cvs diff -u -r 1.18.2.62 -r 1.18.2.63 src/plugins/spamassassin/spamassassin.c;  ) > 3.7.0cvs68.patchset
 ( cvs diff -u -r 1.60.2.131 -r 1.60.2.132 src/addressbook.c;  cvs diff -u -r 1.49.2.125 -r 1.49.2.126 src/procmime.c;  ) > 3.7.0cvs69.patchset
+( cvs diff -u -r 1.25.2.64 -r 1.25.2.65 src/stock_pixmap.c;  cvs diff -u -r 1.2.2.25 -r 1.2.2.26 src/gtk/colorlabel.c;  ) > 3.7.0cvs70.patchset
